--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -35,9 +35,9 @@ body.newsession{
 
 body.dashboard{
 	text-align: center;
-	background-image: url("http://i.imgur.com/MuCZcFg.jpg");
+	background-image: url("http://i.imgur.com/vqO5OeQ.jpg");
 	background-size: cover;
-	color: black;
+	color: white;
 }
 
 body.show{
@@ -51,6 +51,18 @@ body.show{
 body.results{
 	text-align: center;
 	background-image: url("http://abacusrx.us/Movie_background.jpg");
+	background-size: cover;
+	color: white;
+}
+
+.favorites{
+	text-align: right;
+	margin-right:25px;
+}
+
+body.new{
+	text-align: center;
+	background-image: url("http://www.resolutionwall.com/wp-content/uploads/2014/03/futuristic-wallpaper-5.jpg");
 	background-size: cover;
 	color: white;
 }
@@ -82,5 +94,9 @@ th {
   border: 1px solid #999;
   padding: 0.5rem;
   text-align: center;
+}
+
+.poster{
+	float:left;
 }
 
