--- a/app/views/movies/dashboard.html.erb
+++ b/app/views/movies/dashboard.html.erb
@@ -1,18 +1,33 @@
 <body class="dashboard">
- 	<% if signed_in? %>
-		Logged in as <%= current_user.display_name %>
-		<%= link_to "Log out", logout_path, :class=>"btn btn-danger" %>
-	<% else %>
-		<%= link_to "Sign Up", signup_path,  :class=>"btn btn-primary"%> or
-		<%= link_to "Log In", login_path, :class=>"btn btn-primary"%>
+	<h3>Welcome, <%= current_user.display_name %>!</h3>
+	
+<h3> Your current favorites:</h3>
+
+<table style="margin:auto; background-color: transparent;">
+	<tr>
+		<th>Movie Title</th>
+		<th>Rating</th>
+		<th>Comment</th>
+		<th>Delete</th>
+	</tr>
+
+	<% @favorite_movies.each do |x| %>
+	<tr>
+		<td><a href='/movies/<%= x.movie.imdbID%>'> <%= x.movie.title %> </a></td>
+		<td><%= x.rating %></td>
+		<td><%= x.comment %></td>
+		<td><%= link_to "Delete", destroy_favorite_path(x.id), method: :delete, data: { confirm: "You sure?" }, :class => "btn btn-danger"%></td>
+	</tr>
 	<% end %>
+</table>
+
+<br />
 
 <div class="search-form">
-		<h2>Search a movie:</h1>
+		<h2>Search for a new movie to add:</h1>
 			<form action="/search" method="get">
 				<input id="movie" name="movie" type="text" placeholder="Search any movie" />
 				<input name="commit" type="submit" value="Search"/>
 	 		</form>
-</div>
-<%= @movies.title %>
+
 </body>
