--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,32 +1,31 @@
+<body class="new">
+
 <h1>Sign up</h1>
 
 <div class="row">
     <div class="col-md-6 col-sm-6 col-md-offset-3 col-sm-offset-3">
-    <%= form_for(@user) do |f| %>
+    <%= bootstrap_form_for(@user) do |f| %>
       <% unless @user.errors.count == 0   %>
         <div class="alert alert-error">
           The form contains <%= pluralize(@user.errors.count, "error") %>.
         </div>
         <ul class="list-group">
-        <% @user.errors.full_messages.each do |msg| %>
-          <li class="list-group-item"><%= msg %></li>
-        <% end %>
+          <% @user.errors.full_messages.each do |msg| %>
+            <li class="list-group-item"><%= msg %></li>
+          <% end %>
         </ul>
-      <% end %>
+    <% end %>
 
-      <%= f.label :display_name %>
       <%= f.text_field :display_name %>
 
-      <%= f.label :email %>
       <%= f.text_field :email %>
 
-      <%= f.label :password %>
       <%= f.password_field :password %>
 
-      <%= f.label :password_confirmation, "Confirmation" %>
       <%= f.password_field :password_confirmation %>
-
-      <%= f.submit "Create my account"%>
+<br />
+      <%= f.submit "Create my account", class: "btn btn-success"%>
     <% end %>
   </div>
 </div>
+</body>
