--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,10 +11,10 @@
  *= require bootstrap.min.css
  *= require_self
  *= require_tree .
- //= require rails_bootstrap_forms
+ *= require rails_bootstrap_forms
  */
 
-body.newsession{
+.newsession{
 	text-align: center;
 	background-image: url("http://eventstepandrepeat.com/media/backgrounds/bg1.jpg");
 	background-size: cover;
