--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,5 @@
-<body class="new">
+<% content_for :body_type do%>
+new<% end %>
 
 <h1>Sign up</h1>
 
@@ -28,4 +29,3 @@
     <% end %>
   </div>
 </div>
-</body>
