--- a/app/views/movies/dashboard.html.erb
+++ b/app/views/movies/dashboard.html.erb
@@ -1,4 +1,5 @@
-<body class="dashboard">
+<% content_for :body_type do%>
+dashboard<% end %>
 	<h3>Welcome, <%= current_user.display_name %>!</h3>
 	
 <h3> Your current favorites:</h3>
@@ -29,5 +30,3 @@
 				<input id="movie" name="movie" type="text" placeholder="Search any movie" />
 				<input name="commit" type="submit" value="Search"/>
 	 		</form>
-
-</body>
