--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,5 +1,5 @@
-<body class="show">
- 	
+<% content_for :body_type do%>
+show<% end %>
 	<div class="search">
 		<h1> Search Results:</h1>
 		<table style="margin:auto;">
@@ -14,6 +14,3 @@
 
 <br />
 	</div>
-
-</body>
-
