--- a/app/views/movies/results.html.erb
+++ b/app/views/movies/results.html.erb
@@ -48,5 +48,5 @@ results<% end %>
 </table>
 <br />
 
-	<iframe class="youtube-player" type="text/html" width="640" height="385" src="http://www.youtube.com/embed/<%=@var3%>" allowfullscreen frameborder="0">
+	<iframe class="youtube-player" type="text/html" width="640" height="385" src="https://www.youtube.com/embed/<%=@var3%>" allowfullscreen frameborder="0">
 	</iframe>
