added rails env bundle

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,7 +24,7 @@
 
 /*http://www.sweetpaul.com/wp-content/uploads/2012/11/binary-sunset.png*/
 
-.homelogo{
+img{
 	text-align: center;
 	margin-top: 40px;
 }
