--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
+<%# Nice use of content_for :) %>
 <body class="<%= yield :body_type %>">
 	<ul class="nav nav-tabs">
     <li class="active"><a href="/home">Home</a></li>
