--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,19 +2,20 @@
 <html>
 <head>
   <title>TrailerApp</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+  <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 <%# Nice use of content_for :) %>
 <body class="<%= yield :body_type %>">
-	<ul class="nav nav-tabs">
-    <li class="active"><a href="/home">Home</a></li>
-    <li>  <% if signed_in? %>
-		      <%= link_to "Log out", logout_path, :class=>"btn btn-danger" %>
-	        <% end %>
-    </li>
-  </ul>
+<ul class="nav nav-tabs">
+  <li class="active"><a href="/home">Home</a></li>
+  <li>
+    <% if signed_in? %>
+        <%= link_to "Log out", logout_path, :class => "btn btn-danger" %>
+    <% end %>
+  </li>
+</ul>
 
 
 <%= yield %>
