--- a/app/views/movies/results.html.erb
+++ b/app/views/movies/results.html.erb
@@ -1,57 +1,52 @@
-<% content_for :body_type do%>
-results<% end %> 
+<% content_for :body_type do %>
+    results
+<% end %>
 
 <ul class="nav nav-pills">
-  <li class="active"><%= link_to("Add to favorites", favorites_path(@movie), method: :post, :class => "btn btn-success")%></li>
-  <li>	<%= form_for @favorite, :url => url_for(:controller => "movies", :action => "update") do |f| %>
-      			<%= f.label :comment %>
-      			<%= f.text_field :comment %>
-<br />
-      			<%= f.label :rating %>
-      			<%= f.text_field :rating %>
-<br />
-   	  			<%= f.submit "Add your comment and rating",  class: "btn btn-large btn-primary" %>
-      <%end %> 
+  <li class="active"><%= link_to("Add to favorites", favorites_path(@movie), method: :post, :class => "btn btn-success") %></li>
+  <li>    <%= form_for @favorite, :url => url_for(:controller => "movies", :action => "update") do |f| %>
+        <%= f.label :comment %>
+        <%= f.text_field :comment %>
+        <br/>
+        <%= f.label :rating %>
+        <%= f.text_field :rating %>
+        <br/>
+        <%= f.submit "Add your comment and rating", class: "btn btn-large btn-primary" %>
+    <% end %>
   </li>
 </ul>
 
-	<div class="poster">
-		<img src= "<%= @infodata["Poster"] %>" /> 
-	</div>
-<br />
-<br />
-<br />
-<br />
+<div class="poster">
+  <img src="<%= @infodata["Poster"] %>"/>
+</div>
+
 
 <h1><%= @infodata["Title"] %></h1>
 
-	<%= @infodata["Plot"] %>			
-
-<br />
-<br />
+<div class="plot"><%= @infodata["Plot"] %></div>
 
 <table style="margin:auto;">
-	<tr>
-		<th>Year</th>
-		<th>Rated</th>
-		<th>Runtime</th>
-		<th>Genre</th>
-		<th>Director</th>
-		<th>Actors</th>
-		<th>IMDB Link</th>
-	</tr>
-	<tr>
-		<td> <%= @infodata["Year"] %> </td>
-		<td> <%= @infodata["Rated"] %> </td>
-		<td> <%= @infodata["Runtime"] %> </td>
-		<td> <%= @infodata["Genre"] %> </td>
-		<td> <%= @infodata["Director"] %> </td>
-		<td> <%= @infodata["Actors"] %> </td>
-		<td> <a href='http://www.imdb.com/title/<%=@link%>'> <%= @infodata["Title"] %></a> </td>
-	</tr>
+  <tr>
+    <th>Year</th>
+    <th>Rated</th>
+    <th>Runtime</th>
+    <th>Genre</th>
+    <th>Director</th>
+    <th>Actors</th>
+    <th>IMDB Link</th>
+  </tr>
+  <tr>
+    <td> <%= @infodata["Year"] %> </td>
+    <td> <%= @infodata["Rated"] %> </td>
+    <td> <%= @infodata["Runtime"] %> </td>
+    <td> <%= @infodata["Genre"] %> </td>
+    <td> <%= @infodata["Director"] %> </td>
+    <td> <%= @infodata["Actors"] %> </td>
+    <td><a href='http://www.imdb.com/title/<%= @link %>'> <%= @infodata["Title"] %></a></td>
+  </tr>
 </table>
-<br />
+<br/>
 
-	<iframe class="youtube-player" type="text/html" width="640" height="385" src="https://www.youtube.com/embed/<%=@var3%>" allowfullscreen frameborder="0">
-	</iframe>
+<iframe class="youtube-player" type="text/html" width="640" height="385" src="https://www.youtube.com/embed/<%= @var3 %>" allowfullscreen frameborder="0">
+</iframe>
 
