--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,11 @@
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
-<body class="<%= yield :body_type %>">
+<body>
 
+<div class="homelink">
+  <b><%= link_to 'Home', root_path %></b>
+</div>
 
 <%= yield %>
 
