--- a/app/views/movies/dashboard.html.erb
+++ b/app/views/movies/dashboard.html.erb
@@ -1,14 +1,17 @@
-<% content_for :body_type do%>
-dashboard<% end %>
-	
-<h3> Your current favorites:</h3>
 
+<div class="container-home">
+	<div class="logo">
+		<img src="http://i.imgur.com/5uFuL9D.png" style="height:400px; width: 600px">
+	</div>
+	<div class="moviehome">
+		<h1>Welcome to MovieGoer!</h1>
+		<p>Find out more about all your favorite movies!</p>
 
-<br />
-
-<div class="search-form">
-		<h2>Search for a new movie to add:</h1>
-			<form action="/search" method="get">
-				<input id="movie" name="movie" type="text" placeholder="Search any movie" />
-				<input name="commit" type="submit" value="Search"/>
-	 		</form>
+	<form role="form" action="/search" method="get" class="col-md-6 col-md-offset-3">
+  		<div class="form-group">
+    		<input type="text" name="movie" class="form-control" id="movie" placeholder="Iron Man...etc.">
+  		</div>
+  			<button type="submit" class="btn btn-default">Submit</button>
+	</form>
+	</div>
+</div>
