--- a/app/views/movies/results.html.erb
+++ b/app/views/movies/results.html.erb
@@ -1,43 +1,32 @@
-<% content_for :body_type do%>
-results<% end %> 
 
+
+<div class="container-movie">
 	<div class="poster">
 		<img src= "<%= @infodata["Poster"] %>" /> 
 	</div>
-<br />
-<br />
-<br />
-<br />
 
-<h1><%= @infodata["Title"] %></h1>
+<div class="containerinfo">
+<div class="movietitle">
+	<h1><%= @infodata["Title"] %> (<%= @infodata["Year"] %>)</h1>
+	<p><%= @infodata["Rated"] %>, <%= @infodata["Runtime"] %> - <%= @infodata["Genre"] %></p>
+</div>
 
+<div class="movieplot">
 	<%= @infodata["Plot"] %>			
+</div>
 
-<br />
-<br />
+<div class="movieinfo">
+	<h4>Director</h4>
+	<p> <%= @infodata["Director"] %> </p>
+	<h4>Actors</h4>
+	<p> <%= @infodata["Actors"] %> </p>
 
-<table style="margin:auto;">
-	<tr>
-		<th>Year</th>
-		<th>Rated</th>
-		<th>Runtime</th>
-		<th>Genre</th>
-		<th>Director</th>
-		<th>Actors</th>
-		<th>IMDB Link</th>
-	</tr>
-	<tr>
-		<td> <%= @infodata["Year"] %> </td>
-		<td> <%= @infodata["Rated"] %> </td>
-		<td> <%= @infodata["Runtime"] %> </td>
-		<td> <%= @infodata["Genre"] %> </td>
-		<td> <%= @infodata["Director"] %> </td>
-		<td> <%= @infodata["Actors"] %> </td>
-		<td> <a href='http://www.imdb.com/title/<%=@link%>'> <%= @infodata["Title"] %></a> </td>
-	</tr>
-</table>
-<br />
+</div>
 
-	<iframe class="youtube-player" type="text/html" width="640" height="385" src="https://www.youtube.com/embed/<%=@var3%>" allowfullscreen frameborder="0">
+<div class="youtube">
+	<h4>Watch Trailer</h4>
+	<iframe class="youtube-player" type="text/html" width="320px" height="192.5px" src="https://www.youtube.com/embed/<%=@var3%>" allowfullscreen frameborder="0">
 	</iframe>
-
+</div>
+</div>
+</div>
